I change some Things in Django and the Templates

--- a/home/templates/home/nf.html
+++ b/home/templates/home/nf.html
@@ -6,7 +6,7 @@
 
 <div class="ui raised padded text container segment">
   <h2 class="ui header">404 - Not Found</h2>
-  <p>This Site don't exist</p>
+  <p>This Site don't exist. Try go to the <a href="/home">Home</a></p>
 </div>
 
 {% endblock %}
