--- a/home/templates/home/servers.html
+++ b/home/templates/home/servers.html
@@ -170,7 +170,7 @@
       </span>
       <span>
         <i class="user icon"></i>
-        12 Users in Leaderboard
+        16 Users in Leaderboard
       </span>
     </div>
   </div>
@@ -212,7 +212,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://osu.xii.nz/static/logos/xiilogo1.png">
+      <img src="https://marc.enjuu.click/download/4484948.png">
     </div>
     <div class="content">
       <div class="header">XII</div>
