added the new add function

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -19,7 +19,7 @@
     		</div>
     			<a class="item" href="/home"><i class="blue home icon"></i>Home</a>
     			<a class="item" href="/servers"><i class="blue server icon"></i>Servers</a>
-          	<a class="item" href="mailto:kazuki@enjuu.click"><i class="blue plus icon"></i>Add a Server</a>
+          	<a class="item" href="/add"><i class="blue plus icon"></i>Add a Server</a>
     		</div>
       </div>
     </div>
