Added new Mail Form

--- a/home/templates/home/addserver.html
+++ b/home/templates/home/addserver.html
@@ -6,24 +6,9 @@
 <img src="{% static 'img/headers/new.png' %}" class="responsive" alt="Responsive image">
 
 <div class="ui raised padded text container segment">
-  <h2 class="ui header">The new osu! Server List</h2>
-  <p>This is the new osu! Server List hosted by Enjuu written in Python Django. Here are listed all currently found osu! Servers. I don't care how many Users there have. If you want to add your Server. Write me an EMail <a href="mailto:kazuki@enjuu.click">kazuki@enjuu.click</a></p>
-  <p>Support us here!</p>
-  <a href="https://github.com/MarcPlaying/osu-Server-List">
-  <button class="ui labeled icon button">
-    <i class="github icon"></i>
-    GitHub
-  </button></a>
-  <a href="https://twitter.com/OEnjuu">
-  <button class="ui labeled icon button">
-    <i class="twitter icon"></i>
-    Twitter
-  </button></a>
-  <a href="https://enjuu.click">
-  <button class="ui labeled icon button">
-    <i class="server icon"></i>
-    Enjuu
-  </button></a>
+  <h2 class="ui header">Send us your Server!</h2>
+  <iframe src="https://www.emailmeform.com/builder/form/dd1S3rzdVm4y9378vN2JfeIel" height="400" width="600"></iframe>
+
 </div>
 
 {% endblock %}
