--- a/home/templates/home/servers.html
+++ b/home/templates/home/servers.html
@@ -22,7 +22,7 @@
       <div class="description">
         Enjuu is a osu! Private Server that exist since January. Featuring RX and many more Features.
         <br>
-        <a href="https://enjuu.click">
+        <a href="/ref?s=enjuu.click">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -56,7 +56,7 @@
       <div class="description">
         Ripple is the Private Server with the most Users.
         <br>
-        <a href="https://ripple.moe">
+        <a href="/ref?s=ripple.moe">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -89,7 +89,7 @@
       <div class="description">
         Akatsuki is Features Relax and STD PP
         <br>
-        <a href="https://akatsuki.pw/">
+        <a href="/ref?s=akatsuki.pw">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -122,7 +122,7 @@
       <div class="description">
         Gatari is a Russian osu Server. With a nice Clan System
         <br>
-        <a href="https://osu.gatari.pw/?">
+        <a href="/ref?s=osu.gatari.pw?">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -156,7 +156,7 @@
       <div class="description">
         Vipsu is a small and new osu! Private Server
         <br>
-        <a href="https://vipsu.ml/">
+        <a href="/ref?s=vipsu.ml">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -189,7 +189,7 @@
       <div class="description">
         SkyCircles is a new Russian osu Server
         <br>
-        <a href="https://skycircles.ru/">
+        <a href="/ref?s=skycircles.ru">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -226,7 +226,7 @@
         All default bancho stuff, such as beatmap submittion.
         A few comming soon. (written by owner)
         <br>
-        <a href="https://gigamons.de/">
+        <a href="/ref?s=gigamons.de">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
@@ -259,7 +259,7 @@
       <div class="description">
         XII is a small and new osu Server
         <br>
-        <a href="https://osu.xii.nz/">
+        <a href="/ref?s=osu.xii.nz">
         <button class="ui basic button">
           <i class="globe icon"></i>
           Go To Website
