--- a/home/templates/home/addserver.html
+++ b/home/templates/home/addserver.html
@@ -7,7 +7,8 @@
 
 <div class="ui raised padded text container segment">
   <h2 class="ui header">Send us your Server!</h2>
-  <iframe src="https://www.emailmeform.com/builder/form/dd1S3rzdVm4y9378vN2JfeIel" height="400" width="600"></iframe>
-
+  <div class="embed-container">
+    <iframe width="560" height="315" src="https://www.emailmeform.com/builder/form/dd1S3rzdVm4y9378vN2JfeIel" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 {% endblock %}
