--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,7 +7,7 @@
 
 <div class="ui raised padded text container segment">
   <h2 class="ui header">The new osu! Server List</h2>
-  <p>This is the new osu! Server List hosted by Enjuu written in Python Django. Here are listed all currently found osu! Servers. I don't care how many Users there have. If you want to add your Server. Write me an EMail <a href="/add/server">Add your Server</a></p>
+  <p>This is the new osu! Server List hosted by Enjuu written in Python Django. Here are listed all currently found osu! Servers. I don't care how many Users there have. If you want to add your Server <a href="/add/server">Add your Server</a></p>
   <p>Support us here!</p>
   <a href="https://github.com/MarcPlaying/osu-Server-List">
   <button class="ui labeled icon button">
