Add a page to view more about the Server

--- a/home/templates/home/servers.html
+++ b/home/templates/home/servers.html
@@ -22,10 +22,10 @@
       <div class="description">
         Enjuu is a osu! Private Server that exist since January. Featuring RX and many more Features.
         <br>
-        <a href="/ref?s=enjuu.click">
+        <a href="/view?s=2">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
         <a href="https://twitter.com/OEnjuu"><button class="ui basic button"><i class="twitter icon"></i></button></a>
@@ -37,7 +37,7 @@
       </span>
       <span>
         <i class="user icon"></i>
-        317 Users in Leaderboard
+        504 Users in Leaderboard
       </span>
     </div>
   </div>
@@ -56,10 +56,10 @@
       <div class="description">
         Ripple is the Private Server with the most Users.
         <br>
-        <a href="/ref?s=ripple.moe">
+        <a href="/view?s=3">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -89,10 +89,10 @@
       <div class="description">
         Akatsuki is Features Relax and STD PP
         <br>
-        <a href="/ref?s=akatsuki.pw">
+        <a href="/view?s=1">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -122,10 +122,10 @@
       <div class="description">
         Gatari is a Russian osu Server. With a nice Clan System
         <br>
-        <a href="/ref?s=osu.gatari.pw?">
+        <a href="/view?s=4">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -156,10 +156,10 @@
       <div class="description">
         Vipsu is a small and new osu! Private Server
         <br>
-        <a href="/ref?s=vipsu.ml">
+        <a href="/view?s=5">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -189,10 +189,10 @@
       <div class="description">
         SkyCircles is a new Russian osu Server
         <br>
-        <a href="/ref?s=skycircles.ru">
+        <a href="/view?s=6">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -226,10 +226,10 @@
         All default bancho stuff, such as beatmap submittion.
         A few comming soon. (written by owner)
         <br>
-        <a href="/ref?s=gigamons.de">
+        <a href="/view?s=7">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
@@ -259,10 +259,10 @@
       <div class="description">
         XII is a small and new osu Server
         <br>
-        <a href="/ref?s=osu.xii.nz">
+        <a href="/view?s=8">
         <button class="ui basic button">
           <i class="globe icon"></i>
-          Go To Website
+          View more
         </button>
         </a>
       </div>
