added Akatsuki full des

--- a/home/templates/home/nodes.html
+++ b/home/templates/home/nodes.html
@@ -37,7 +37,7 @@
     <div class="ui one column doubling stackable grid container">
       <div class="column">
           <p></p>
-          <p>This Server don't has a full description. If you are the Server Owner. Write me an Full description to Discord(Kazuki#0776) or Mail(kazuki@enjuu.click)</p>
+          <p>This Server don't has a full description. If you are the Server Owner. Write me a full description to Discord(Kazuki#0776) or Mail(kazuki@enjuu.click)</p>
       </div>
   </div>
 
