hey, server list is back up again

--- a/home/templates/home/servers.html
+++ b/home/templates/home/servers.html
@@ -12,7 +12,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://enjuu.click/static/logos/logo-blue.png">
+      <img src="https://s.enjuu.click/s/enjuu.png">
     </div>
     <div class="content">
       <div class="header">Enjuu</div>
@@ -37,7 +37,7 @@
       </span>
       <span>
         <i class="user icon"></i>
-        504 Users in Leaderboard
+        300 Users in Leaderboard
       </span>
     </div>
   </div>
@@ -46,7 +46,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/1482369.png">
+      <img src="https://s.enjuu.click/s/ripple.svg">
     </div>
     <div class="content">
       <div class="header">Ripple</div>
@@ -79,7 +79,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/1930773.png">
+      <img src="https://s.enjuu.click/s/akatsuki.png">
     </div>
     <div class="content">
       <div class="header">Akatsuki</div>
@@ -112,7 +112,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/9381005.png">
+      <img src="https://s.enjuu.click/s/gatari.png">
     </div>
     <div class="content">
       <div class="header">Gatari</div>
@@ -146,7 +146,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/2325559.png">
+      <img src="https://s.enjuu.click/s/vipsu.png">
     </div>
     <div class="content">
       <div class="header">Vipsu</div>
@@ -179,7 +179,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/3832546.png">
+      <img src="https://s.enjuu.click/s/skycircles.png">
     </div>
     <div class="content">
       <div class="header">SkyCircles</div>
@@ -212,7 +212,7 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/6312014.png">
+      <img src="https://s.enjuu.click/s/gigamons.png">
     </div>
     <div class="content">
       <div class="header">Gigamons</div>
@@ -249,15 +249,15 @@
 <div class="ui link cards">
   <div class="ui centered card">
     <div class="image">
-      <img src="https://marc.enjuu.click/download/4484948.png">
+      <img src="https://s.enjuu.click/s/enshi.png">
     </div>
     <div class="content">
-      <div class="header">XII</div>
+      <div class="header">Enshi</div>
       <div class="meta">
         <a>STD PP</a>
       </div>
       <div class="description">
-        XII is a small and new osu Server
+        Enshi is a private osu! server, with features such as PP for all 4 gamemodes (including DT mania pp!), fully-functioning multiplayer, spectator, and many others
         <br>
         <a href="/view?s=8">
         <button class="ui basic button">
@@ -269,11 +269,11 @@
     </div>
     <div class="extra content">
       <span class="right floated">
-        03.06.2018
+        17.08.2018
       </span>
       <span>
         <i class="user icon"></i>
-        19 Users in Leaderboard
+        42 Users in Leaderboard
       </span>
     </div>
   </div>
